# ai-assisted-devops-labs

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  azure.yaml  docker-compose.yml  fly.staging.toml  fly.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
aws/: deploy.sh
backend/: Dockerfile  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_soft_deletes.py
backend/app/: business_metrics.py  config.py  database.py  logging_config.py  main.py  telemetry.py  well_known.py
backend/app/middleware/: logging.py  metrics.py  rate_limit.py  security_headers.py
backend/app/models/: __init__.py  comment.py  project.py  task.py  user.py
backend/app/repositories/: comment_repository.py  project_repository.py  task_repository.py  user_repository.py
backend/app/routers/: auth.py  deps.py  projects.py  tasks.py
backend/app/schemas/: __init__.py  comment.py  project.py  task.py  user.py
backend/app/services/: auth_service.py  task_service.py
backend/tests/: conftest.py  test_auth_endpoints.py  test_auth_integration.py  test_auth_service.py  test_governance.py  test_observability.py  test_projects_integration.py  test_security.py  test_task_service.py  test_tasks_integration.py
docs/: diagrams.md  instructor-guide.md  operations.md  pen-test-report.md  reflection.md  rubric.md  test-results.md  threat-model.md  user-guide.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts
load-tests/: locustfile.py
observability/: prometheus.yml  recording_rules.yml
pen-tests/: manual-checks.sh  zap-scan.sh
solution/: .env.example  CHANGELOG.md  README.md  fly.toml  (+1 more)
(+190 files in other folders)
